Design QA: fix grid alignments on desktop. Refs #375

--- a/resources/assets/sass/blocks/DoubleColText.scss
+++ b/resources/assets/sass/blocks/DoubleColText.scss
@@ -20,7 +20,7 @@
 .DoubleColText__container {
   grid-column: main;
   @include breakpoint(768px) {
-    grid-column: 2 / -2;
+    grid-column: 3 / -3;
     columns: 2;
     column-gap: calc(100% / 11);
   }
