--- a/resources/assets/sass/blocks/GenericGrid.scss
+++ b/resources/assets/sass/blocks/GenericGrid.scss
@@ -58,10 +58,10 @@
   grid-column: main;
   @include breakpoint(768px) {
     &:nth-child(odd) {
-      grid-column: 2 / 8;
+      grid-column: 3 / 8;
     }
     &:nth-child(even) {
-      grid-column: 9 / -2;
+      grid-column: 9 / -3;
     }
   }
   @include breakpoint($a-xxlarge-up) {
