--- a/resources/assets/sass/blocks/TextImage.scss
+++ b/resources/assets/sass/blocks/TextImage.scss
@@ -42,7 +42,7 @@
     grid-column: main;
     @include breakpoint(768px) {
       grid-row: 1;
-      grid-column: 2 / 8;
+      grid-column: 3 / 8;
     }
     @include breakpoint($a-xxlarge-up) {
       grid-column: 4 / 9;
@@ -52,7 +52,7 @@
     grid-column: main;
     @include breakpoint(768px) {
       grid-row: 1;
-      grid-column: 9 / -2;
+      grid-column: 9 / -3;
     }
     @include breakpoint($a-xxlarge-up) {
       grid-column: 10 / -4;
@@ -65,7 +65,7 @@
     grid-column: main;
     @include breakpoint(768px) {
       grid-row: 1;
-      grid-column: 9 / -2;
+      grid-column: 9 / -3;
     }
     @include breakpoint($a-xxlarge-up) {
       grid-column: 10 / -4;
@@ -75,7 +75,7 @@
     grid-column: main;
     @include breakpoint(768px) {
       grid-row: 1;
-      grid-column: 2 / 8;
+      grid-column: 3 / 8;
     }
     @include breakpoint($a-xxlarge-up) {
       grid-column: 4 / 9;
